Add responses and request models in auth
